--- a/style.css
+++ b/style.css
@@ -838,11 +838,13 @@ footer {
         flex-direction: column;
         justify-content: space-around;
     }
-
 }   
 
 @media only screen and (max-width: 1000px){
     .links{
         display: none;
+    }
+    .tech-stack {
+        width: 100%;
     }
 }
